...
                padding: EdgeInsets.only(top: 20.0, left: 20.0),
                child: Row(
                  children: <Widget>[
                    stockNameWidget(context),
                    Spacer(),
                    IconButton(
                      key: Key("addToWishlistButtonKey"),
                      padding: EdgeInsets.only(right: 20.0),
                      onPressed: () async {
                        setState(() {
                          addedToWatchlist = !addedToWatchlist;
                        });

...
                          } catch (error) {
                            developer.log("Error updating wishlist $error");
                          }
                        }
                      },
                      icon: Icon(
                        key: Key("addToWishlistIconKey"),
                        Icons.star,
                        size: 40,
                        color: addedToWatchlist ? Colors.yellow : Colors.grey,
                      ),
                    ),
                    BlocBuilder<StockCubit, StockState>(
...
