...
                      left: 15.0, right: 15.0, top: 15, bottom: 0),
                  child: TextField(
                    obscureText: true,
                    controller: smsCodeController,
                    decoration: InputDecoration(
                        border: OutlineInputBorder(),
                        labelText: 'OTP',
                        hintText: 'Enter OTP received'),
                  ),
                ),
                Padding(
                  padding: EdgeInsets.symmetric(vertical: 15),
                  child: ElevatedButton(
...
